# profile_api_assignment

./: .dockerignore  Cargo.toml  Dockerfile  README.md
e2e/: main.py
src/: config.rs  main.rs
src/repository/: inram.rs  mod.rs  model.rs
src/service/: config.rs  mod.rs  model.rs  profile_service.rs  test_service.rs
src/web/: controller.rs  error.rs  mod.rs  model.rs
