[package]
name = "profile_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# datastructures etc
chrono = { version = "0.4.38", features = ["serde"] }
dashmap = "6.1.0"

# Web frameworks
axum = { version = "0.7.6", features = ["json", "macros", "query"] }
envconfig = "0.10.0"
http = "1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
